# MetaGate

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW_1.md  Dockerfile  MetaGate v0 Specification.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.ps1  run_local.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  postgresql-init-configmap.yaml  secret.yaml  service.yaml
migrations/: 001_initial_schema.sql  002_audit_logging.sql
scripts/: generate_jwt.py  seed_data.py
src/metagate/: __init__.py  config.py  database.py  logging.py  main.py  receiptgate_client.py  tenancy.py
src/metagate/api/: admin.py  bootstrap.py  discovery.py  startup.py
src/metagate/auth/: auth.py
src/metagate/mcp/: routes.py
src/metagate/middleware/: __init__.py  rate_limit.py
src/metagate/models/: db_models.py  schemas.py
src/metagate/services/: audit.py  bootstrap.py  receipts.py  startup.py
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_bootstrap.py  test_startup.py
